# FJsample

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fpm.toml
app/: GEVP.py  main.f90  singleCorrelator.py
c_wrapper/: FJsample_c.f90
python/: meson.build  pyproject.toml
python/FJsample/: #main.py#  __init__.py  boot.py  jack.py
python/FJsample/compiled/: __init__.py
src/: FJsample.f90  boot.F90  boot.f90  jack.f90  types.f90
