[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "numpy",
    "fpm; platform_system!='Windows'",
    "ninja; platform_system!='Windows'",
    "wheel"
]

[tool.black]
line-length = 79
target-version = ["py310"]


[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*"]
skip = ["*-win32"]


[project]
name = "FJsample"
version = "0.2.0"
authors = [{name = "Ryan Bignell", email = "ryan07bignell+github@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
description = "Jackknife & bootstrap resampling in Fortran with python bindings"


dependencies = [
    'numpy',
]
